# spartan2-merkle-tree

./: .gitignore  Cargo.toml
merkle-trees/src/: lib.rs
merkle-trees/src/vanilla_tree/: circuit.rs  tree.rs
src/: aggregation_circuit.rs  aggregation_circuit_nova.rs  main.rs  membership_circuit.rs
